Structure Dashboard OK

--- a/src/main/resources/web/templates/directives/headerMenu.html
+++ b/src/main/resources/web/templates/directives/headerMenu.html
@@ -23,36 +23,36 @@
 
 <!-- Connected Fisrt header-->
 <div class="navbar-fixed" ng-show="user">
-    <nav class="top-nav grey lighten-3" role="navigation">    
+    <nav class="top-nav light-green lighten-1" role="navigation">    
         <div class="container">
             <div class="nav-wrapper">
 
                 <!-- Dropdown Structure -->
                 <ul id="dropdownSearch" class="dropdown-content">
-                    <li><a href="#/private/" class="red-text text-lighten-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-event' | translate }}">
+                    <li><a href="#/private/" class="red-text text-darken-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-event' | translate }}">
                         <i class="fa fa-calendar center"></i></a>
                     </li>
                     <li class="divider red darken-4" ></li>
-                    <li><a href="#/private/" class="red-text text-lighten-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-player' | translate }}">
+                    <li><a href="#/private/" class="red-text text-darken-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-player' | translate }}">
                         <i class="mdi-social-person center"></i></a>
                     </li>
                 </ul>
 
-                <a href="#/private/" class="brand-logo blue-grey-text text-lighten-1 center"><small><i class="fa fa-home left"></i><span class="hide-on-med-and-down">{{structure.label}}</span></small></a>
+                <a href="#/private/" class="brand-logo white-text center"><small><i class="fa fa-home left"></i><span class="hide-on-med-and-down">{{structure.label}}</span></small></a>
 
-                <ul class="left hide-on-med-and-down red lighten-1">
+                <ul class="left hide-on-med-and-down red darken-1 ">
                     <li><a class="dropdown-button white-text light" href="#/private/" data-activates="dropdownSearch"><i class="mdi-action-search left"></i>{{'headerMenu.search' | translate }}</a></li>
                 </ul>
                 <ul class="right hide-on-med-and-down">
-                    <li><a ng-click="logoff()"><i class="blue-grey-text text-lighten-1 fa fa-power-off right"></i></a></li>
+                    <li><a ng-click="logoff()"><i class="white-text fa fa-power-off right"></i></a></li>
                 </ul>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#/private/profil" class="blue-grey-text text-lighten-1">{{user.firstname}} {{user.name}}</li>
+                    <li><a href="#/private/profil" class="white-text">{{user.firstname}} {{user.name}}</li>
                 </ul>
 
                 <a href="#" data-activates="nav-mobile" class="button-collapse grey-text text-lighten-1"><i class="mdi-navigation-menu left"></i></a>
 
-                <ul id="nav-mobile" class="side-nav blue-grey">
+                <ul id="nav-mobile" class="side-nav blue-grey darken-3">
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-envelope left"></i>{{'headerMenu.notification' | translate }}</a></li>
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-bar-chart left"></i>{{'headerMenu.stats' | translate }}</a></li>
                     <li><a href="#/private/" class="white-text light"><i class="mdi-social-people left"></i>{{'headerMenu.effective' | translate }}</a></li>
@@ -68,7 +68,7 @@
 </div>
 <div  ng-show="user">
     <!-- Connected second header-->
-    <nav class="blue-grey hide-on-med-and-down" role="navigation">
+    <nav class="green darken-1 hide-on-med-and-down" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
                 <ul>
