Liste joueur sur dashboard

--- a/src/main/resources/web/templates/directives/headerMenu.html
+++ b/src/main/resources/web/templates/directives/headerMenu.html
@@ -50,7 +50,7 @@
                     <li><a href="#/private/profil" class="white-text">{{user.firstname}} {{user.name}}</li>
                 </ul>
 
-                <a href="#" data-activates="nav-mobile" class="button-collapse grey-text text-lighten-1"><i class="mdi-navigation-menu left"></i></a>
+                <a href="#" data-activates="nav-mobile" class="button-collapse white-text"><i class="mdi-navigation-menu left"></i></a>
 
                 <ul id="nav-mobile" class="side-nav blue-grey darken-3">
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-envelope left"></i>{{'headerMenu.notification' | translate }}</a></li>
