--- a/src/main/resources/web/templates/prive/home.html
+++ b/src/main/resources/web/templates/prive/home.html
@@ -59,18 +59,18 @@
     <!-- player list-->
     <div class="col s12 m6 l4">
         <!-- TOP 3 -->
-        <div><h5 class="header red-text text-lighten-1"><i class="fa fa-trophy"></i> {{'prive.dashboard.topplayer' | translate }}</h5></div>
+        <div><h5 class="header red-text text-lighten-1"><i class="mdi-action-stars"></i> {{'prive.dashboard.topplayer' | translate }}</h5></div>
         <ul class="collapsible popout" data-collapsible="accordion">
             <li>
-              <div class="collapsible-header tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-player' | translate }}"><i class="fa fa-futbol-o"></i>1 - {{user.firstname}} {{user.name}}</div>
+              <div class="collapsible-header tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-player' | translate }}"><i class="fa fa-futbol-o"></i> {{user.firstname}} {{user.name}}</div>
               <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
             </li>
             <li>
-              <div class="collapsible-header"><i class="mdi-maps-place"></i>2 - {{user.firstname}} {{user.name}}</div>
+              <div class="collapsible-header"><i class="mdi-image-timer"></i> {{user.firstname}} {{user.name}}</div>
               <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
             </li>
             <li>
-              <div class="collapsible-header"><i class="mdi-social-whatshot"></i>3 - {{user.firstname}} {{user.name}}</div>
+              <div class="collapsible-header"><i class="mdi-social-whatshot"></i> {{user.firstname}} {{user.name}}</div>
               <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
             </li>
         </ul>
