--- a/src/main/resources/web/templates/directives/headerMenu.html
+++ b/src/main/resources/web/templates/directives/headerMenu.html
@@ -55,8 +55,8 @@
                 <ul id="nav-mobile" class="side-nav blue-grey darken-3">
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-envelope left"></i>{{'headerMenu.notification' | translate }}</a></li>
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-bar-chart left"></i>{{'headerMenu.stats' | translate }}</a></li>
-                    <li><a href="#/private/" class="white-text light"><i class="mdi-social-people left"></i>{{'headerMenu.effective' | translate }}</a></li>
-                    <li><a href="#/private/" class="white-text light"><i class="mdi-av-timer left"></i>{{'headerMenu.training' | translate }}</a></li>
+                    <li><a href="#/private/playerlist" class="white-text light"><i class="mdi-social-people left"></i>{{'headerMenu.effective' | translate }}</a></li>
+                    <li><a href="#/private/" class="white-text light"><i class="mdi-image-timer left"></i>{{'headerMenu.training' | translate }}</a></li>
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-trophy left"></i>{{'headerMenu.championship' | translate }}</a></li>
                     <li><a href="#/private/" class="white-text light"><i class="fa fa-calendar left"></i>{{'headerMenu.calendar' | translate }}</a></li>
                     <li class="divider"></li>
@@ -74,8 +74,8 @@
                 <ul>
                     <li><a href="#/private/" class="light"><i class="fa fa-envelope left"></i><span class="hide-on-med-and-down">{{'headerMenu.notification' | translate }}</span></a></li>
                     <li><a href="#/private/" class="light"><i class="fa fa-bar-chart left"></i><span class="hide-on-med-and-down">{{'headerMenu.stats' | translate }}</span></a></li>
-                    <li><a href="#/private/" class="light"><i class="mdi-social-people left"></i><span class="hide-on-med-and-down">{{'headerMenu.effective' | translate }}</span></a></li>
-                    <li><a href="#/private/" class="light"><i class="mdi-av-timer left"></i><span class="hide-on-med-and-down">{{'headerMenu.training' | translate }}</span></a></li>
+                    <li><a href="#/private/playerlist" class="light"><i class="mdi-social-people left"></i><span class="hide-on-med-and-down">{{'headerMenu.effective' | translate }}</span></a></li>
+                    <li><a href="#/private/" class="light"><i class="mdi-image-timer left"></i><span class="hide-on-med-and-down">{{'headerMenu.training' | translate }}</span></a></li>
                     <li><a href="#/private/" class="light"><i class="fa fa-trophy left"></i><span class="hide-on-med-and-down">{{'headerMenu.championship' | translate }}</span></a></li>
                     <li><a href="#/private/" class="light"><i class="fa fa-calendar left"></i><span class="hide-on-med-and-down">{{'headerMenu.calendar' | translate }}</span></a></li>
                 </ul>
