--- a/src/main/resources/web/templates/prive/players/playerList.html
+++ b/src/main/resources/web/templates/prive/players/playerList.html
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col s12">
         <!-- Action bar players -->
-        <div></div>
+        <div><a class="btn-floating btn-small waves-effect waves-light red darken-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-event' | translate }}"><i class="mdi-content-add"></i></a></div>
     </div>
 </div>
     
@@ -15,6 +15,7 @@
 <div class="row">
     <div class="col s12">
         <!-- List Player -->
+        <div><h5 class="header lime-text text-darken-1">{{'players.playerList.title' | translate }} {{currentCategory.label}}</h5></div>
         <ul class="collection">
             <li class="collection-item avatar" ng-repeat="player in effective">
               <img src="img/user.png" alt="" class="circle responsive-img">
