--- a/src/main/resources/web/templates/directives/headerMenu.html
+++ b/src/main/resources/web/templates/directives/headerMenu.html
@@ -29,18 +29,18 @@
 
                 <!-- Dropdown Structure -->
                 <ul id="dropdownSearch" class="dropdown-content">
-                    <li><a href="#/private/" class="red-text text-darken-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-event' | translate }}">
+                    <li><a href="#/private/" class="red-text text-lighten-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-event' | translate }}">
                         <i class="fa fa-calendar center"></i></a>
                     </li>
-                    <li class="divider red darken-4" ></li>
-                    <li><a href="#/private/" class="red-text text-darken-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-player' | translate }}">
+                    <li class="divider red lighten-1" ></li>
+                    <li><a href="#/private/" class="red-text text-lighten-1 tooltipped" data-position="right" data-delay="30" data-tooltip="{{'headerMenu.search-player' | translate }}">
                         <i class="mdi-social-person center"></i></a>
                     </li>
                 </ul>
 
                 <a href="#/private/" class="brand-logo white-text center"><small><i class="fa fa-home left"></i><span class="hide-on-med-and-down">{{structure.label}}</span></small></a>
 
-                <ul class="left hide-on-med-and-down red darken-1 ">
+                <ul class="left hide-on-med-and-down red lighten-1 ">
                     <li><a class="dropdown-button white-text light" href="#/private/" data-activates="dropdownSearch"><i class="mdi-action-search left"></i>{{'headerMenu.search' | translate }}</a></li>
                 </ul>
                 <ul class="right hide-on-med-and-down">
