--- a/src/main/resources/web/templates/prive/home.html
+++ b/src/main/resources/web/templates/prive/home.html
@@ -8,7 +8,7 @@
     <div class="col s12 m6 l8">
         
         <!-- Event -->
-        <div><h5 class="header light-green-text text-darken-1"><i class="fa fa-calendar left"></i>{{'prive.dashboard.event' | translate }}</h5></div>
+        <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-calendar left"></i>{{'prive.dashboard.event' | translate }}</h5></div>
 
         <div>
             <div class="card small white">
@@ -33,7 +33,7 @@
         <br/>
         
         <!-- Collecte-->
-        <div><h5 class="header light-green-text text-darken-1"><i class="fa fa-bar-chart"></i> {{'prive.dashboard.stats' | translate }}</h5></div>
+        <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'prive.dashboard.stats' | translate }}</h5></div>
         <div>
             <div class="card small">
                 <div class="card-image waves-effect waves-block waves-light">
@@ -77,7 +77,7 @@
         <br/>
         
         <!-- List Player -->
-        <div><h5 class="header lime-text text-darken-1"><i class="fa fa-bar-chart"></i> {{'prive.dashboard.player' | translate }}</h5></div>
+        <div><h5 class="header light-green-text text-lighten-1"><i class="fa fa-bar-chart"></i> {{'prive.dashboard.player' | translate }}</h5></div>
         <ul class="collection">
             <li class="collection-item avatar" ng-repeat="player in effective">
               <img src="img/user.png" alt="" class="circle responsive-img">
