bug fix sur le path des templates

--- a/src/app/components/headerMenu/headerMenu.html
+++ b/src/app/components/headerMenu/headerMenu.html
@@ -1,10 +1,9 @@
-
 <!-- Not connected -->
 <nav class="top-nav white" role="navigation" ng-hide="user">
     <div class="container" >
         <div class="nav-wrapper" >
             
-            <a href="#/" class="brand-logo"><img src="img/logo-mini.png"/></a>
+            <a href="#/" class="brand-logo"><img src="assets/images/logo-mini.png"/></a>
             
             <ul class="right hide-on-med-and-down">
                 <li><a href="#modalLogin" class="grey-text text-lighten-1 modal-trigger"><i class="fa fa-sign-in right"></i>{{'navbar.connect' | translate}}</a></li>
@@ -18,8 +17,6 @@
         </div>
     </div>
 </nav>
-
-
 
 <!-- Connected Fisrt header-->
 <div class="navbar-fixed" ng-show="user">
