--- a/src/app/components/headerMenu/headerMenu.html
+++ b/src/app/components/headerMenu/headerMenu.html
@@ -44,7 +44,7 @@
                     <li><a ng-click="logoff()"><i class="white-text fa fa-power-off right"></i></a></li>
                 </ul>
                 <ul class="right hide-on-med-and-down">
-                    <li><a href="#/private/profil" class="white-text">{{user.firstname}} {{user.name}}</li>
+                    <li><a href="#/private/profil" class="white-text">{{user.firstname}} {{user.name}}</a></li>
                 </ul>
 
                 <a href="#" data-activates="nav-mobile" class="button-collapse white-text"><i class="mdi-navigation-menu left"></i></a>
